--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="google-site-verification" content="fMbPGCm8IeOPqeqCuO5pMyJn3Cg7dWOm4nU-QKkd2Gc" />
   <title>Online Video Downloader — Professional and Reliable Solution for Downloading Videos Easily</title>
   <meta name="description" content="A complete, professional, and optimized guide to Online Video Downloaders: how they work, safety, legality, comparison table, best practices, and the future of online downloading." />
   <meta name="theme-color" content="#0b1220" />
@@ -603,3 +604,4 @@
   </footer>
 </body>
 </html>
+
